--- a/lab3/Pedometer_IIoT/app/src/main/res/layout/content_main.xml
+++ b/lab3/Pedometer_IIoT/app/src/main/res/layout/content_main.xml
@@ -3,12 +3,14 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
+
     <CheckedTextView
         android:id="@+id/AT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="392dp"
         android:text="@string/AT"
-        android:textSize="20dp" />
+        android:textSize="24sp" />
+
     <CheckedTextView
         android:id="@+id/onAccuracyChanged"
         android:layout_width="wrap_content"
@@ -28,7 +30,15 @@
             android:id="@+id/Button_Stop"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="@string/Button_Stop" android:textSize="20dp"/>
+            android:text="@string/Button_Stop"
+            android:textSize="20dp"/>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/Steps"
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:text="@string/Steps"
+        android:textSize="24dp"/>
 </LinearLayout>
 
